@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.revision3"
        name="Revision3"
-       version="1.0.3"
+       version="1.0.4"
        provider-name="stacked">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
