@@ -1,3 +1,3 @@
 <settings>
-   <setting id="quality" type="select" lvalues="30003|30004|30005|30006|30007|30008|30009" label="30000" default="quicktime-high-definition"/>
+   <setting id="format" type="select" lvalues="30003|30004|30005|30006|30007|30008|30009" label="30000" default="quicktime-high-definition"/>
 </settings>
