@@ -1,3 +1,7 @@
+[B]Version 1.0.4[/B]
+
+- Fixed settings error
+
 [B]Version 1.0.3[/B]
 
 - Changed the default video quality to Quicktime HD
